Bug 142925 - Comment popup menu button's arrowhead is larger (and uglier) than before
Summary: Comment popup menu button's arrowhead is larger (and uglier) than before
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.3.0 target:7.2.0.0.beta2
Keywords: bibisected, bisected, needsUXEval, regression
Depends on:
Blocks: Writer-Comments
  Show dependency treegraph
 
Reported: 2021-06-18 00:46 UTC by Aron Budea
Modified: 2021-06-18 18:14 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (70.67 KB, image/png)
2021-06-18 00:46 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2021-06-18 00:46:37 UTC
Created attachment 172993 [details]
Screenshot

This is a regression from the following two commit.

Caolán, I'm not sure about the intention, was the default size supposed to change, or only that the size should be affected by zooming in/out? Personally I preferred the older default size, but perhaps others think differently (added the UX team for input).

https://cgit.freedesktop.org/libreoffice/core/commit/?id=d3765ec240eca85a72c6940a5e19bb82d65cad03
author		Caolán McNamara <caolanm@redhat.com>	2021-02-19 10:52:49 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2021-02-19 15:55:33 +0100

Related: tdf#140409 scale the menubutton like the other widgets
Comment 1 Heiko Tietze 2021-06-18 08:45:33 UTC
Also distorted (width > height).
Comment 2 Commit Notification 2021-06-18 14:30:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e8dac3bd339383876bbe42f3e9559df4b13b6d91

tdf#142925 render the button arrow like it used to be

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2021-06-18 14:50:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/0389e2eb50ddc0f83bfa4469861592165ea911de

tdf#142925 render the button arrow like it used to be

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2021-06-18 14:51:00 UTC
that looks about right to me now
Comment 5 Aron Budea 2021-06-18 18:14:53 UTC
Looks good in LO Version: 7.3.0.0.alpha0+ (51754ca5349d7bf655d57ded37381188d0bc4bcf) / Ubuntu.
Thanks for fixing, Caolán.