tdf#142925 render the button arrow like it used to be

in 7.1

Change-Id: Ibbe4b7dd2212d1bc28bad7588672bb37c8259605
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117417
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 0389e2eb50ddc0f83bfa4469861592165ea911de)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/117755
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Andras Timar <andras.timar@collabora.com>