sw/source/uibase/docvw/AnnotationWin2.cxx
@@ -463,11 +463,27 @@ void SwAnnotationWin::SetMenuButtonColors()
                              ColorFromAlphaColor(80, mColorAnchor, mColorDark));
     xVirDev->DrawGradient(aRect, aGradient);
 
+    //draw rect around button
+    xVirDev->SetFillColor();
+    xVirDev->SetLineColor(ColorFromAlphaColor(90, mColorAnchor, mColorDark));
+    xVirDev->DrawRect(aRect);
+
+    tools::Rectangle aSymbolRect(aRect);
+    // 25% distance to the left and right button border
+    const tools::Long nBorderDistanceLeftAndRight = ((aSymbolRect.GetWidth() * 250) + 500) / 1000;
+    aSymbolRect.AdjustLeft(nBorderDistanceLeftAndRight );
+    aSymbolRect.AdjustRight( -nBorderDistanceLeftAndRight );
+    // 40% distance to the top button border
+    const tools::Long nBorderDistanceTop = ((aSymbolRect.GetHeight() * 400) + 500) / 1000;
+    aSymbolRect.AdjustTop(nBorderDistanceTop );
+    // 15% distance to the bottom button border
+    const tools::Long nBorderDistanceBottom = ((aSymbolRect.GetHeight() * 150) + 500) / 1000;
+    aSymbolRect.AdjustBottom( -nBorderDistanceBottom );
     DecorationView aDecoView(xVirDev.get());
-    aDecoView.DrawSymbol(aRect, SymbolType::SPIN_DOWN, GetTextColor(),
+    aDecoView.DrawSymbol(aSymbolRect, SymbolType::SPIN_DOWN, GetTextColor(),
                          DrawSymbolFlags::NONE);
     mxMenuButton->set_image(xVirDev);
-    mxMenuButton->set_size_request(aSize.Width() + 4, aSize.Height());
+    mxMenuButton->set_size_request(aSize.Width() + 4, aSize.Height() + 4);
 }
 
 void SwAnnotationWin::Rescale()
